# quick-protobuf

./: generate_modules.sh  run_test.sh
pb-rs/: Cargo.toml
pb-rs/src/: errors.rs  lib.rs  main.rs  parser.rs  scc.rs  types.rs
perftest/: Cargo.toml  build.rs
perftest/src/: main.rs
quick-protobuf/: Cargo.toml
quick-protobuf/examples/: pb_rs_example_v3_owned.rs
quick-protobuf/examples/pb_rs_v3/: data_types.rs  data_types_unit.proto  data_types_unit.rs
quick-protobuf/examples/pb_rs_v3/owned/: data_types.rs  data_types_unit.rs
quick-protobuf/examples/pb_rs_v3/owned/a/: b.rs
quick-protobuf/src/: errors.rs  lib.rs  message.rs  reader.rs  sizeofs.rs  writer.rs
quick-protobuf/tests/rust_protobuf/v2/: test_owned.rs  test_owned_must_compile_error.rs  test_owned_must_compile_error.stderr
quick-protobuf/tests/rust_protobuf/v3/: test_owned.rs  test_owned_must_compile_error.stderr
