[package]
name = "pb-rs"
version = "0.8.3"
description = "A converter from proto files into quick-protobuf compatible rust module"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser", "quick-protobuf"]
license = "MIT"
readme = "README.md" 
repository = "https://github.com/tafia/quick-protobuf"
edition = "2018"

[dependencies]
anyhow = "^1.0"
nom = "^3.2"
clap = "^2.33"
log = "^0.4"
env_logger = "^0.7"
thiserror = "^1.0"

[dev-dependencies]
walkdir = "^2.2"

[features]
default = []
generateImplFromForEnums = []
