[package]
name = "quick-protobuf"
description = "A pure Rust protobuf (de)serializer. Quick."
version = "0.6.4"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser"]
license = "MIT"
readme = "README.md" 
documentation = "https://docs.rs/quick-protobuf"
repository = "https://github.com/tafia/quick-protobuf"
edition = "2018"

[dependencies]
byteorder = "^1.3"
thiserror = "^1.0"

[dev-dependencies]
lazy_static = "^1.4"
